# recsys

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ruff.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml
notebooks/: Camilo-HG_ml_solution.ipynb
src/rec_sys/: __init__.py  __main__.py  settings.py
src/rec_sys/pipelines/data_processing/: nodes.py  pipeline.py
src/rec_sys/pipelines/raw/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
