[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Camilo-HG", email = "22363097+Camilo-HG@users.noreply.github.com" }
]
dependencies = [
    "kedro>=0.19.13",
    "kedro-viz>=11.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
